@@ -4,6 +4,7 @@ v0.2.1 (2021-09-12)
 - sources: add hockeyweb.site
 - sources: add thecyclingentertainment.com
 - sources: add nflscoop.net
+- sources: add uhdstreams.club
 
 v0.2.0 (2021-09-11)
 - providers: add soccerstreamlinks.com (soccer)
